fix(main.scss) remove overflow property its causes bugs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,8 +45,6 @@ body {
   padding-left: 60px;
   padding-right: 60px;
 
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 #wrapper {
